[gd_scene load_steps=8 format=2]

[ext_resource path="res://Spikes.gd" type="Script" id=1]
[ext_resource path="res://Spikes_New.png" type="Texture" id=2]
[ext_resource path="res://NecroBoi_New.png" type="Texture" id=3]
[ext_resource path="res://Audio_Spiking.wav" type="AudioStream" id=4]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( -26, 0, -30, 32, 30, 32, 26, 0, 16, -12, -16, -12 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 32, 28 )

[sub_resource type="ConvexPolygonShape2D" id=3]
points = PoolVector2Array( -30, 0, -32, 32, 32, 32, 30, 0, 22, -22, -22, -22 )

[node name="Spikes" type="Node2D"]
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
self_modulate = Color( 0.894118, 0.803922, 0.803922, 1 )
position = Vector2( 0, -3.15453 )
scale = Vector2( 0.25, 0.274645 )
texture = ExtResource( 2 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]
input_pickable = true
collision_layer = 64
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource( 1 )

[node name="CollisionFixed" type="StaticBody2D" parent="."]
input_pickable = true
collision_layer = 64
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollisionFixed"]
position = Vector2( -7.62939e-006, 3.25895 )
shape = SubResource( 2 )

[node name="HitBox" type="Area2D" parent="."]
editor/display_folded = true
gravity_vec = Vector2( 0, 0 )
gravity = 0.0
linear_damp = 0.0
angular_damp = 0.0
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
shape = SubResource( 3 )

[node name="RaisinHitbox" type="Area2D" parent="."]
editor/display_folded = true
gravity_vec = Vector2( 0, 0 )
gravity = 0.0
linear_damp = 0.0
angular_damp = 0.0
collision_layer = 0
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="RaisinHitbox"]
shape = SubResource( 3 )

[node name="Sprite2" type="Sprite" parent="."]
self_modulate = Color( 0, 0.25, 0, 1 )
position = Vector2( 0, -12.4997 )
rotation = 1.5708
scale = Vector2( 0.19915, 0.230356 )
texture = ExtResource( 3 )

[node name="Sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = -20.194

